# file-manager

./: .gitignore  README.md  SETUP.md  package-lock.json  package.json  turbo.json
apps/api/: .env.example  README.md  database.py  dependencies.py  main.py  models.py  package.json  pyproject.toml  requirements.txt  settings.py
apps/api/routes/: __init__.py  file.py  login.py
apps/api/services/: __init__.py  supabase.py
apps/web/: README.md  next.config.js  package.json  proxy.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/auth/confirm/: route.ts
apps/web/app/auth/logout/: actions.ts
apps/web/app/error/: page.tsx
apps/web/app/login/: actions.ts  page.tsx
apps/web/app/private/: page.tsx
apps/web/app/signup/: actions.ts  page.tsx
apps/web/components/: EditInput.tsx  FileTable.tsx  FileUploader.tsx  Navbar.tsx  UploadProgress.tsx  alert.tsx
apps/web/components/ui/: dropdown-menu.tsx
apps/web/utils/: auth.ts  errors.ts  formatDate.ts
apps/web/utils/supabase/: middleware.ts  server.ts
