[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.120.2",
    "python-dotenv>=1.2.1",
    "supabase>=2.22.3",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.2",
    "pydantic-settings>=2.5.0",
]
